--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <!--Favicon-->
   <link rel="shortcut icon" href="./img/index.png">
   <!--Title-->
-  <title>ICT PANEL - Contact</title>
+  <title>BGE'12 - Contact</title>
   <!--Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Barlow:wght@400;500;700;800;900&display=swap" rel="stylesheet"> 
   <!--Font Awesome Files-->
