--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="notice.html" class="nav-link menu-btn1"><i class="fas fa-chalkboard"></i> নোটিশ বোর্ড</a>
+          <a href="https://docs.google.com/spreadsheets/d/1vQIX_VzfKvx2cVZuCJed41JUyglAZa8nMDh2GZzPGcg/edit?usp=sharing" class="nav-link menu-btn1"><i class="fas fa-chalkboard"></i> নোটিশ বোর্ড</a>
         </li>
         <li class="nav-item">
           <a href="contact.html" class="nav-link menu-btn2"><i class="fas fa-address-book"></i>  কন্টাক্ট আস</a>
@@ -86,36 +86,6 @@
       </div>
   
  </section>
- <!-- Messenger Chat Plugin Code -->
-    <div id="fb-root"></div>
-
-    <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
-    </div>
-
-    <script>
-      var chatbox = document.getElementById('fb-customer-chat');
-      chatbox.setAttribute("page_id", "105551812449917");
-      chatbox.setAttribute("attribution", "biz_inbox");
-    </script>
-
-    <!-- Your SDK code -->
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          xfbml            : true,
-          version          : 'v15.0'
-        });
-      };
-
-      (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-        fjs.parentNode.insertBefore(js, fjs);
-      }(document, 'script', 'facebook-jssdk'));
-    </script>
 
 
   <!--JS Scripts-->
