--- a/book.html
+++ b/book.html
@@ -72,7 +72,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="notice.html" class="nav-link menu-btn1"><i class="fas fa-chalkboard"></i> নোটিশ বোর্ড</a>
+          <a href="https://docs.google.com/spreadsheets/d/1vQIX_VzfKvx2cVZuCJed41JUyglAZa8nMDh2GZzPGcg/edit?usp=sharing" class="nav-link menu-btn1"><i class="fas fa-chalkboard"></i> নোটিশ বোর্ড</a>
         </li>
         <li class="nav-item">
           <a href="contact.html" class="nav-link menu-btn2"><i class="fas fa-address-book"></i>  কন্টাক্ট আস</a>
