--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="https://docs.google.com/spreadsheets/d/1v10ucSBuQVeeoJd2CTVbhbD9URvOc5rqBGjbIvSKO-Y/edit?usp=sharing" class="nav-link menu-btn1"><i class="fas fa-chalkboard"></i> নোটিশ বোর্ড</a>
+          <a href="https://docs.google.com/spreadsheets/d/1v10ucSBuQVeeoJd2CTVbhbD9URvOc5rqBGjbIvSKO-Y/edit?usp=sharing" class="nav-link menu-btn1"><i class="fas fa-chalkboard"></i> Notice Board</a>
         </li>
         <li class="nav-item">
-          <a href="contact.html" class="nav-link menu-btn2"><i class="fas fa-address-book"></i>  কন্টাক্ট আস</a>
+          <a href="contact.html" class="nav-link menu-btn2"><i class="fas fa-address-book"></i>  Contact us</a>
         </li>
       </ul>
     </div>
@@ -70,8 +70,8 @@
    <div class="container">
      <div class="row">
        <div class="col-lg-12">
-        <h2 class="section-title" data-aos="fade-up">ন্যাসাসারি ম্যাটেরিয়াল</h2>
-        <a href="#" class="sub-title" data-aos="fade-up">স্টোরে ঘুরে আসুন  <span><i class="fa fa-chevron-right"></i></span></a>
+        <h2 class="section-title" data-aos="fade-up">Necessary Materials</h2>
+        <a href="#" class="sub-title" data-aos="fade-up">BGE Store  <span><i class="fa fa-chevron-right"></i></span></a>
        </div>
      </div>
      <div class="owl-carousel owl-theme" data-aos="fade-up">
