--- a/contact.html
+++ b/contact.html
@@ -363,10 +363,10 @@ img {
           </a>
         </li>
         <li class="nav-item">
-          <a href="https://docs.google.com/spreadsheets/d/1v10ucSBuQVeeoJd2CTVbhbD9URvOc5rqBGjbIvSKO-Y/edit?usp=sharing" class="nav-link menu-btn1" class="nav-link menu-btn1"><i class="fas fa-chalkboard"></i> নোটিশ বোর্ড</a>
+          <a href="https://docs.google.com/spreadsheets/d/1v10ucSBuQVeeoJd2CTVbhbD9URvOc5rqBGjbIvSKO-Y/edit?usp=sharing" class="nav-link menu-btn1" class="nav-link menu-btn1"><i class="fas fa-chalkboard"></i> Notice Board</a>
         </li>
         <li class="nav-item">
-          <a href="contact.html" class="nav-link menu-btn2"><i class="fas fa-address-book"></i>  কন্টাক্ট আস</a>
+          <a href="contact.html" class="nav-link menu-btn2"><i class="fas fa-address-book"></i>  Contact us</a>
         </li>
       </ul>
     </div>
