--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     </div>
   </div>
   </nav>
+<div class="col-12 mt-5">
+  <img src="img/c_1.png" class="img-fluid d-block" alt="">
+</div>
+</div>
 
  <!--Books Section-->
  <section id="Books" class="text-center py-5 mb-5">
