--- a/index.html
+++ b/index.html
@@ -78,7 +78,17 @@
         <a href="#" class="sub-title" data-aos="fade-up">BGE Store  <span><i class="fa fa-chevron-right"></i></span></a>
        </div>
      </div>
-     <div class="owl-carousel owl-theme" data-aos="fade-up">
+        <div class="owl-carousel owl-theme" data-aos="fade-up">
+      <div class="item">
+        <div class="slider-content pb-5 pt-2 my-4">
+          <a href="book.html">
+            <img src="img/rutine.png" alt="spoken-eng-thumb" class="slider-img img-fluid">
+            <h3 class="slider-title">Class Routine</h3>
+            <p class="book-author">Biotechnology & Genetic Engineering</p>
+          </a>
+        </div>
+      </div>
+     
       <div class="item">
         <div class="slider-content pb-5 pt-2 my-4">
           <a href="book.html">
