--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="owl-carousel owl-theme" data-aos="fade-up">
       <div class="item">
         <div class="slider-content pb-5 pt-2 my-4">
-          <a href="https://docs.google.com/spreadsheets/d/1c7OlUwlz7JpZbSmSgfJSpkuXzQ87nLMWTPMbZ1h1Q-0/edit?usp=sharing">
+          <a href="https://drive.google.com/drive/folders/1njIV-37R-VxDd9zJdCkBK_pTVVjHzOIe?usp=sharing">
             <img src="img/rutine.png" alt="spoken-eng-thumb" class="slider-img img-fluid">
             <h3 class="slider-title">Class Routine</h3>
             <p class="book-author">Biotechnology & Genetic Engineering</p>
