--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
           </a>
         </div>
       </div>
+      <div class="item">
+        <div class="slider-content pb-5 pt-2 my-4">
+          <a href="https://drive.google.com/drive/folders/1-8fB7ikfQ3MtDmZC2kfKMPzNsffDlbJw?usp=sharing">
+            <img src="img/lecture.png" alt="spoken-eng-thumb" class="slider-img img-fluid">
+            <h3 class="slider-title">Lecture Sheet</h3>
+            <p class="book-author">Biotechnology & Genetic Engineering</p>
+          </a>
+        </div>
+      </div>
          <div class="item">
         <div class="slider-content pb-5 pt-2 my-4">
           <a href="https://docs.google.com/spreadsheets/d/1ACN_Ili0R_uG3HmD1mLTQljLFK_Eh_7sZmfZIol1YzY/edit?usp=sharing">
