--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
       </div>
   
  </section>
+  <footer style="text-align: center;">
+  <p class="cp-text">
+      © Copyright 2023 BGE'12. All rights reserved. Developed by <a href="https://www.facebook.com/arpon.tanjimur/">Tanjimur Rahman Arpon</a>
+  </p>
+  </footer>
 
 
   <!--JS Scripts-->
