--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
           </a>
         </div>
       </div>
+      <div class="item">
+        <div class="slider-content pb-5 pt-2 my-4">
+          <a href="#">
+            <img src="img/image.png" alt="spoken-eng-thumb" class="slider-img img-fluid">
+            <h3 class="slider-title">Image Gallery</h3>
+            <p class="book-author">Biotechnology & Genetic Engineering</p>
+          </a>
+        </div>
+      </div>
           
 
   
