--- a/index.html
+++ b/index.html
@@ -119,6 +119,20 @@
 
   
  </section>
+ <section id="brac-section" class="my-5">
+  <div class="container">
+    <div class="row p-5" data-aos="fade-up">
+      <div class="col-lg-6 text-center">
+        <img src="img/club.png" class="img-fluid" style="max-height: 10em; width: auto;" alt="Brac">
+      </div>
+      <div class="col-lg-6">
+        <h2 class="mb-2 section-title">Jahangirnagar University Club</h2>
+        <p>জাহাঙ্গীরনগর বিশ্ববিদ্যালয়ের সকল ক্লাব সম্পর্কিত তথ্যের জন্য এক্সপ্লোর বাটনে ক্লিক করুন </p>
+        <a href="#" class="button btn-brac">Explore <span><i class="fa fa-chevron-right"></i></span></a>
+      </div>
+    </div>
+  </div>
+</section>
   <footer style="text-align: center;">
   <p class="cp-text">
       © Copyright 2023 BGE'12. All rights reserved. Developed by <a href="https://www.facebook.com/arpon.tanjimur/">Tanjimur Rahman Arpon</a>
